# gait-imu-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/Subject1_A1/: Subject1_A1_Foot.csv  Subject1_A1_Shank.csv
data/Subject1_A1/Subject1_A1_Regions/: Kalani_Ankle_KalaniAnkle-1_TS-03537_regions_2025-08-19-10-32-37.csv
data/Subject1_K1/: Subject1_K1_Shank.csv  Subject1_K1_Thigh.csv
scripts/: generate_screenshots.py
src/gait_imu/: __init__.py  __main__.py  calibration.py  clinical_reference.py  config.py  export.py  io_utils.py  signal_utils.py  theme.py
src/gait_imu/gait/: __init__.py  ankle.py  knee.py  stride.py
src/gait_imu/ui/: __init__.py  app.py  plots.py  sensor_diagram.py  widgets.py
